[gd_scene load_steps=2 format=3 uid="uid://cpdpmi48q2724"]

[ext_resource type="Script" path="res://Assets/Weapons/BasicWeapon.gd" id="2_7atku"]

[node name="Weapon" type="Sprite2D"]
rotation = 1.5708
script = ExtResource("2_7atku")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="BarrelEnd" type="Marker2D" parent="."]
position = Vector2(-6.29425e-05, -17)

[node name="ShotDelay" type="Timer" parent="."]
process_callback = 0
wait_time = 0.052
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[connection signal="timeout" from="ShotDelay" to="." method="_on_shot_delay_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
